# rocky-3000

./: .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  partitions.csv  platformio.ini  pre_version.py  pre_web_bundle.py  sdkconfig.defaults  sdkconfig.waveshare_28b
.claude/: settings.local.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
components/lvgl__lvgl/: lv_conf.h
scripts/: embed_web.py
src/: CMakeLists.txt  Kconfig.projbuild  main.c  secrets.h  secrets.h.example  version.h
src/LCD_Driver/: ST7701S.c
src/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
src/core/: grind_controller.c  grind_controller.h  grind_history.c  grind_history.h  hx711.c  hx711.h  ota_checker.c  ota_checker.h
src/ui/: display_manager.c  display_manager.h  screen_calibration.c  screen_calibration.h  screen_main.c  screen_main.h  screen_ota.c  screen_ota.h  screen_preset_edit.c  screen_preset_edit.h  screen_settings.c  screen_settings.h  screen_wifi.c  screen_wifi.h  ui_palette.h  web_server.c  web_server.h  wifi_portal.c  wifi_portal.h
test/test_autotune/: test_autotune.c
test/test_flow_rate_stop/: test_flow_rate_stop.c  unity.h
test/test_grind_by_weight/: test_grind_by_weight.c
test/test_grind_history/: esp_err.h  grind_history.c  grind_history.h  nvs.h  nvs_flash.h  nvs_stub.c  test_grind_history.c
test/test_pulse_refinement/: test_pulse_refinement.c
test/unity/: unity.h
web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
