idf_component_register(
    SRCS "main.c"
         "LCD_Driver/ST7701S.c"
         "LVGL_Driver/LVGL_Driver.c"
         "Touch_Driver/GT911.c"
         "Touch_Driver/esp_lcd_touch/esp_lcd_touch.c"
         "I2C_Driver/I2C_Driver.c"
         "EXIO/TCA9554PWR.c"
         "Buzzer/Buzzer.c"
         "core/grind_controller.c"
         "ui/screen_main.c"
         "ui/screen_settings.c"
         "ui/screen_calibration.c"
         "ui/screen_wifi.c"
         "ui/wifi_portal.c"
         "ui/screen_ota.c"
         "ui/display_manager.c"
    INCLUDE_DIRS "."
                 "LCD_Driver"
                 "LVGL_Driver"
                 "Touch_Driver"
                 "Touch_Driver/esp_lcd_touch"
                 "I2C_Driver"
                 "EXIO"
                 "Buzzer"
                 "core"
                 "ui"
    REQUIRES esp_wifi esp_netif nvs_flash esp_event esp_http_server
)
